# bdpx.github.io

./: .gitattributes  CMakeLists.txt  README.md  credo.xml  cv.html  index.html  memorium.html  robots.txt  science.html  styles.css  test.html  test_local.bash  xhtml.xsl  yandex_5a6ec76d0d680364.html
.github/workflows/: deploy.yml
client-server/: dcom.xml  index.html  src.rar  web20.html  xmlrpc.html
compilation/: index.html  individ.html  lab_01.doc  lab_02.doc  lab_03.doc  lab_04.doc  lab_1.html  lab_2.html  lab_3.html  lab_4.html  quest.html  sys_mod_1.doc  sys_mod_2.doc
compilation/sss/: assembler.doc  cross.doc  loader.doc  macroprocessor.doc  ustarelo.doc
cpp/: index.xml  individ.xml  mod1.doc  mod2.doc  quest_1.html  quest_2.html  quest_final.html
cpp/book/: abstract_containers.xml  algorithm_templates.xml  algorithm_templates_next.xml  class_inheritance.xml  class_lifetime.xml  class_multiple_inheritance.xml  class_subtypes.xml  class_templates.xml  classes.xml  datatypes.xml  exceptions.xml  expressions.xml  function_overloading.xml  function_templates.xml  functions.xml  instructions.xml  introduction.xml  introduction_next.xml  iostream.xml  namespaces.xml  operator_conversions.xml  operator_overloading.xml  visibility_scope.xml
cpp/labs/: lab1_class.xml  lab2_virtfunc.xml  lab3_overload.xml  lab4_new_exception.xml  lab5_textfile.xml  lab6_binfile.xml  lab7_template.xml  lab8_stl.xml
cpp/temp/: cache.c  cc2.cpp  ccc.cpp  ellips.cpp  io.cpp  spec.cpp  test.cpp  ttt.cpp  vector.cpp  vector.h
edm/: arc.html  index.html  xslfo.xml
highlighter/: CMakeLists.txt  highlighter.cpp  hl.css  run.bash
js/: codemirror_get.bash  main.js
parallel/: index.xml  labs.xml  parallel.doc  parallel.xml  parallel_old.doc  test.c
sysprog/: index.html  individ.doc  individ.html  individ2.doc  kkr.doc  kkr.xls  kursova.html  labs_c2.html  question.html  sys_mod_3.doc  sys_mod_4.doc
win32gui/: ex1.c  ex2.c  ex3.c  ex4.c  index.html
xml/: dom_app.xml  dtd.xml  index.xml  individ.xml  xml.xml  xml_test.xml  xpath.xml  xsd.xml  xslt.xml
